2004-12-12  Geoff Norton  <gnorton@customerdna.com>

	* exceptions-ppc.c: Reorder code so gcc3.4 can compile it
	* mini-ppc.c: Unify mono_arch_patch_code with changes in r37636.

2004-12-12  Duncan Mak  <duncan@ximian.com>

	* mini-ppc.c (mono_arch_patch_code): Hopefully made this build
	again. `patch_info->table_size' is no longer valid after Zoltan's
	commit #37636.

2004-12-12  Martin Baulig  <martin@ximian.com>

	* mini.c (mono_method_to_ir): Only call mono_debug_init_method()
	if we are the "real" method, ie. not an inlined method inside it.

2004-12-11  Ben Maurer  <bmaurer@ximian.com>

	* mini.c (CEE_LDSFLD): Make sure that the vtable has been init'd
	before we look in the special fields table. This fixes
	../tests/thread-static-init.cs.

2004-12-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* mini.c: return immediately after setting OP_ARRAY_RANK or CEE_LDLEN
	for Array get_Rank and get_Length. Fixes bug #70465.

2004-12-11  Zoltan Varga  <vargaz@freemail.hu>

	* mini.h mini.c aot.c: Put the bblock table for a SWITCH patch into a
	separate structure to reduce the size of MonoJumpInfo.

Fri Dec 10 18:09:22 CET 2004 Paolo Molaro <lupus@ximian.com>

	* mini.c, mini.h, aot.c, driver.c: allow disabling the aot code.

2004-12-10  Patrik Torstensson  <patrik.torstensson@gmail.com>

	* mini.c (mini_get_inst_for_method): Changed to allow ports
	to return a MonoInst instead of opcode 
	(renamed mini_get_opcode_for_method to better reflect the new functionality)
	
	* mini-[x86|s390|s390x|ppc|sparc].c (mono_arch_get_inst_for_method): 
	Allow ports to return a created MonoInst instead of op-code, will enable
	new optimizations.
	(renamed mini_get_opcode_for_method to better reflected the functionality)

2004-12-09  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c (NEW_AOTCONST): Share some code between the different NEW_AOTCONST macros.

2004-12-08  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c jit-icalls.c: Pass generic_context to mono_ldtoken_wrapper.
	Fixes #69985.
