@@ -3336,6 +3336,62 @@ mono_arch_output_basic_block (MonoCompile *cfg, MonoBasicBlock *bb)
 			x86_mov_reg_mem (code, ins->dreg, ins->inst_offset, 4);			
 			break;
 		}
+		case OP_ATOMIC_ADD_I4: {
+			x86_prefix (code, X86_LOCK_PREFIX);
+			x86_xadd_membase_reg (code, ins->inst_basereg, ins->inst_offset, ins->sreg2, 4);
+			if (ins->sreg2 != ins->dreg)
+				x86_mov_reg_reg (code, ins->dreg, ins->sreg2, 4);
+			break;
+		}
+		case OP_ATOMIC_ADD_IMM_PREV_I4: {
+			/* used by Interlocked::Add and returns the prev value before add */
+			x86_mov_reg_imm (code, ins->dreg, ins->inst_imm);
+			x86_prefix (code, X86_LOCK_PREFIX);
+			x86_xadd_membase_reg (code, ins->inst_basereg, ins->inst_offset, ins->dreg, 4);
+			break;
+		}
+		case OP_ATOMIC_ADD_IMM_I4: {
+			/* used by Interlocked::Increment/Decrement and returns the added value */
+			x86_mov_reg_imm (code, ins->dreg, ins->inst_imm);
+			x86_prefix (code, X86_LOCK_PREFIX);
+			x86_xadd_membase_reg (code, ins->inst_basereg, ins->inst_offset, ins->dreg, 4);
+			x86_alu_reg_imm (code, X86_ADD, ins->dreg, ins->inst_imm);
+			break;
+		}
+		case OP_ATOMIC_EXCHANGE_I4: {
+			guchar *br[2];
+			int sreg2 = ins->sreg2;
+
+			/* cmpxchg uses eax as comperand, need to make sure we can use it */
+			/* hack to overcome limits in x86 reg allocator (req: dreg == eax and sreg2 != eax) */
+			if (ins->dreg != X86_EAX) {
+				x86_push_reg (code, X86_EAX);
+			}
+			
+			if (ins->sreg2 == X86_EAX) {
+				x86_push_reg (code, X86_EDX);
+				x86_mov_reg_reg (code, X86_EDX, X86_EAX, 4);
+				sreg2 = X86_EDX;
+			}
+
+			x86_mov_reg_membase (code, X86_EAX, ins->inst_basereg, ins->inst_offset, 4);
+
+			br [0] = code; x86_prefix (code, X86_LOCK_PREFIX);
+			x86_cmpxchg_membase_reg (code, ins->inst_basereg, ins->inst_offset, sreg2);
+			br [1] = code; x86_branch8 (code, X86_CC_NE, -1, FALSE);
+			x86_patch (br [1], br [0]);
+
+			if (ins->dreg != X86_EAX) {
+				x86_mov_reg_reg (code, ins->dreg, X86_EAX, 4);
+				x86_pop_reg (code, X86_EAX);
+			}
+
+			if (ins->sreg2 != sreg2) {
+				x86_pop_reg (code, X86_EDX);
+			}
+
+			break;
+		}
 		default:
 			g_warning ("unknown opcode %s in %s()\n", mono_inst_name (ins->opcode), __FUNCTION__);
 			g_assert_not_reached ();
@@ -3906,6 +3962,36 @@ mono_arch_get_inst_for_method (MonoCompile *cfg, MonoMethod *cmethod, MonoMethod
 			ins->inst_i1 = args [1];
 		}
 #endif
+	} else if (strcmp (cmethod->klass->name, "Interlocked") == 0) {
+		if (strcmp (cmethod->name, "Increment") == 0 && fsig->params [0]->type == MONO_TYPE_I4) {
+			MonoInst *ins_iconst;
+
+			MONO_INST_NEW (cfg, ins, OP_ATOMIC_ADD_IMM_I4);
+			MONO_INST_NEW (cfg, ins_iconst, OP_ICONST);
+			ins_iconst->inst_c0 = 1;
+
+			ins->inst_i0 = args [0];
+			ins->inst_i1 = ins_iconst;
+		} else if (strcmp (cmethod->name, "Decrement") == 0 && fsig->params [0]->type == MONO_TYPE_I4) {
+			MonoInst *ins_iconst;
+
+			MONO_INST_NEW (cfg, ins, OP_ATOMIC_ADD_IMM_I4);
+			MONO_INST_NEW (cfg, ins_iconst, OP_ICONST);
+			ins_iconst->inst_c0 = -1;
+
+			ins->inst_i0 = args [0];
+			ins->inst_i1 = ins_iconst;
+		} else if (strcmp (cmethod->name, "Exchange") == 0 && fsig->params [0]->type == MONO_TYPE_I4) {
+			MONO_INST_NEW (cfg, ins, OP_ATOMIC_EXCHANGE_I4);
+
+			ins->inst_i0 = args [0];
+			ins->inst_i1 = args [1];
+		} else if (strcmp (cmethod->name, "Add") == 0 && fsig->params [0]->type == MONO_TYPE_I4) {
+			MONO_INST_NEW (cfg, ins, OP_ATOMIC_ADD_I4);
+
+			ins->inst_i0 = args [0];
+			ins->inst_i1 = args [1];
+		} 
 	}
 	
 	return ins;
